packages/cashc/test/compiler/ParseError/increment_as_expression.cash
contract ChainedIncrement() {
    function spend() {
        int x = 1;
        int y = x++ * 2;
    }
}
